# CalculatorCheck

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: USPS32_cnn.tflite  cal2_cnn.tflite  cal3_cnn.tflite  calculator_cnn.tflite  combined_cnn.tflite  mnist_cnn.tflite  nomalcharacter_cnn.tflite  normal1000_cnn.tflite  normalcal_cnn.tflite  normalinandroid32_cnn.tflite  normalinandroid_cnn.tflite
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/projectone/: Calculator.java  Classifier.java  ClassifierForHnd.java  ClassifierForNormal.java  MainActivity.java  PictureHandle.java  PictureRotate.java  PictureShow.java  Result.java
app/src/main/res/layout/: activity_main.xml  activity_picture_handle.xml  activity_picture_show.xml
app/src/main/res/layout-land/: activity_main.xml  activity_picture_show.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
